--- a/index.html
+++ b/index.html
@@ -51,6 +51,21 @@
         }
     </style>
 </head>
+<div id="game-controls">Press Z to Shoot | Press P to Restart</div>
+<style>
+  #game-controls {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 10px;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: white;
+    padding: 6px 10px;
+    border-radius: 6px;
+    z-index: 999;
+  }
+</style>
 <body>
     <script>
         let player;
